<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tip"> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7D85CF"
    android:orientation="vertical"
    tools:context=".tip">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:maxWidth="24sp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tip_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tip_bill"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="186dp" />

    <RadioGroup
        android:id="@+id/rag_tip_amt"
        android:layout_width="301dp"
        android:layout_height="301dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="265dp">

        <EditText
            android:id="@+id/etxt_bill"
            android:layout_width="118dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:hint="@string/tip_totalHint"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteY="178dp" />

        <RadioButton
            android:id="@+id/tip_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_10" />

        <RadioButton
            android:id="@+id/tip_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_15" />

        <RadioButton
            android:id="@+id/tip_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_20" />

        <Button
            android:id="@+id/btn_tip_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="24sp"
            android:text="@string/tip_btn" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_tip_total"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:text="@string/tip_total"
        android:textAlignment="center" />


</LinearLayout>