<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".tax"
    android:background="#7D85CF">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:maxWidth="24sp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/taxText"
        android:layout_width="411dp"
        android:layout_height="117dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tax_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_below="@id/btn_back"/>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/txt_taxBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/tax_bill"
        android:textAlignment="center"
        android:layout_below="@id/taxText"
        />

    <EditText
        android:id="@+id/etxt_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_taxBill"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/tax_bill_ex"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/txt_taxRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tax_taxRate"
        android:textAlignment="center"
        android:layout_below="@id/etxt_bill" />

    <EditText
        android:id="@+id/etxt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tax_tax_ex"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_below="@id/txt_taxRate" />

    <Button
        android:id="@+id/btn_taxCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_calc"
        android:layout_below="@id/etxt_rate" />

    <TextView
        android:id="@+id/txt_calcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_final"
        android:layout_below="@id/btn_taxCalc"/>


</RelativeLayout>
